--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -9,7 +9,6 @@
     android:orientation="vertical"
     >
 
-
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -19,39 +18,290 @@
             android:layout_height="?attr/actionBarSize"
             app:titleTextColor="@color/primaryTextColor"
             app:title="@string/dashboard"
-            app:navigationIcon="@drawable/ic_back"
             >
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
-    <GridLayout
-        android:id="@+id/gridlayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:rowCount="3"
-        android:columnCount="2"
-        android:padding="@dimen/gl_padding"
-        android:layout_marginTop="?attr/actionBarSize"
-        >
 
-        <!--row1 col1-->
+    <android.support.v7.widget.GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/backgroundDark"
+
+        android:padding="16dp"
+
+        app:columnCount="2"
+        app:rowCount="3"
+        app:columnOrderPreserved="false"
+        app:useDefaultMargins="true"
+
+        >
+        <!--col1 row1-->
         <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view"
-            android:layout_gravity="center"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            card_view:cardCornerRadius="@dimen/cornerRadius"
-            card_view:cardElevation="4dp"
-            android:background="@color/secondaryDarkColor"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="#FF5252"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
             >
             <LinearLayout
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp">
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Plans"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
                 <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_sketch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col2 row1-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="#FF5252"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Inventory"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col1 row1-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="#FF5252"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Finances"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col2 row1-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="#FF5252"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Forums"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col1 row2-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="#FF5252"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Milestones"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col2 row2-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="#FF5252"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Sample"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col1 row3-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="#FF5252"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Sample"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col2 row3-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="#FF5252"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Sample"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -59,6 +309,9 @@
         </android.support.v7.widget.CardView>
 
 
-    </GridLayout>
+
+    </android.support.v7.widget.GridLayout>
+
+
 
 </LinearLayout>
