--- a/app/src/main/res/layout/activity_secondary.xml
+++ b/app/src/main/res/layout/activity_secondary.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".SecondaryActivity">
 
-
-    <android.support.design.widget.AppBarLayout
+<!--Unsure about where to put the appbar-->
+    <!--<android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <android.support.v7.widget.Toolbar
@@ -21,25 +21,22 @@
             app:layout_scrollFlags="scroll|enterAlways|snap"
             >
         </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout>-->
 
+    
     <!-- Frame layout with spacings set aside for appbars
-     using margin top and bottom
+     using margin bottom
      -->
-
     <FrameLayout
         android:id="@+id/secondaryContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginBottom="?attr/actionBarSize"
         >
 
     </FrameLayout>
 
-
-
-
+    <!--Always on bottom navigation bar-->
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
